--- a/kubernetes/apps/database/mariadb/cluster/cluster.yaml
+++ b/kubernetes/apps/database/mariadb/cluster/cluster.yaml
@@ -29,7 +29,7 @@ spec:
   bootstrapFrom:
     s3:
       bucket: mariadb
-      endpoint: http://minio.default.svc.cluster.local:9000
+      endpoint: minio.default.svc.cluster.local:9000
       accessKeyIdSecretKeyRef:
         name: mariadb-secret
         key: AWS_ACCESS_KEY_ID
