fix(mariadb): dbref

--- a/kubernetes/apps/database/mariadb/cluster/backup.yaml
+++ b/kubernetes/apps/database/mariadb/cluster/backup.yaml
@@ -4,7 +4,7 @@ metadata:
   name: backup
 spec:
   mariaDbRef:
-    name: mariadb-galera
+    name: mariadb-cluster
   schedule:
     cron: "0 0 * * *"
     suspend: false
