--- a/kubernetes/apps/database/mariadb/cluster/gatus.yaml
+++ b/kubernetes/apps/database/mariadb/cluster/gatus.yaml
@@ -10,7 +10,7 @@ data:
     endpoints:
       - name: mariadb
         group: infrastructure
-        url: tcp://mariadb-galera.database.svc.cluster.local:3306
+        url: tcp://mariadb.database.svc.cluster.local:3306
         interval: 1m
         ui:
           hide-url: true
