--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -20,6 +20,7 @@ resources:
   - ./home-assistant/ks.yaml
   - ./jellyseerr/ks.yaml
   - ./kopia/ks.yaml
+  - ./lidarr/ks.yaml
   - ./maintainerr/ks.yaml
   - ./minio/ks.yaml
   - ./oauth2-proxy/ks.yaml
