--- a/kubernetes/apps/default/lidarr/app/externalsecret.yaml
+++ b/kubernetes/apps/default/lidarr/app/externalsecret.yaml
@@ -6,30 +6,12 @@ metadata:
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
-    name: onepassword-connect
+    name: onepassword
   target:
     name: lidarr-secret
     template:
       engineVersion: v2
       data:
-        config.xml: |
-          <Config>
-            <InstanceName>Lidarr</InstanceName>
-            <BindAddress>*</BindAddress>
-            <SslPort>80</SslPort>
-            <EnableSsl>False</EnableSsl>
-            <ApiKey>{{ .LIDARR_API_KEY }}</ApiKey>
-            <LogLevel>info</LogLevel>
-            <AuthenticationMethod>External</AuthenticationMethod>
-            <AuthenticationRequired>DisabledForLocalAddresses</AuthenticationRequired>
-            <PostgresUser>{{ .LIDARR_POSTGRES_USER }}</PostgresUser>
-            <PostgresPassword>{{ .LIDARR_POSTGRES_PASSWORD }}</PostgresPassword>
-            <PostgresPort>5432</PostgresPort>
-            <PostgresHost>postgres16-rw.database.svc.cluster.local</PostgresHost>
-            <PostgresMainDb>lidarr_main</PostgresMainDb>
-            <PostgresLogDb>lidarr_log</PostgresLogDb>
-            <UpdateMechanism>Docker</UpdateMechanism>
-          </Config>
         # App
         LIDARR__API_KEY: "{{ .LIDARR_API_KEY }}"
         LIDARR__POSTGRES_HOST: &dbHost postgres16-rw.database.svc.cluster.local
