revert: use config files
* envs are not ready for prime time :(

--- a/kubernetes/apps/default/readarr-ab/app/externalsecret.yaml
+++ b/kubernetes/apps/default/readarr-ab/app/externalsecret.yaml
@@ -11,6 +11,25 @@ spec:
     name: readarr-ab-secret
     template:
       data:
+        config.xml: |
+          <Config>
+            <InstanceName>Readarr Audiobooks</InstanceName>
+            <BindAddress>*</BindAddress>
+            <SslPort>80</SslPort>
+            <EnableSsl>False</EnableSsl>
+            <ApiKey>{{ .READARR_AB_API_KEY }}</ApiKey>
+            <LogLevel>info</LogLevel>
+            <AuthenticationMethod>External</AuthenticationMethod>
+            <AuthenticationRequired>DisabledForLocalAddresses</AuthenticationRequired>
+            <PostgresUser>{{ .READARR_AB_POSTGRES_USER }}</PostgresUser>
+            <PostgresPassword>{{ .READARR_AB_POSTGRES_PASSWORD }}</PostgresPassword>
+            <PostgresPort>5432</PostgresPort>
+            <PostgresHost>postgres16-rw.database.svc.cluster.local</PostgresHost>
+            <PostgresMainDb>readarr_ab_main</PostgresMainDb>
+            <PostgresLogDb>readarr_ab_log</PostgresLogDb>
+            <PostgresCacheDb>readarr_ab_cache</PostgresCacheDb>
+            <UpdateMechanism>Docker</UpdateMechanism>
+          </Config>
         # App
         READARR__API_KEY: "{{ .READARR_AB_API_KEY }}"
         READARR__POSTGRES_HOST: &dbHost postgres16-rw.database.svc.cluster.local
