--- a/kubernetes/apps/default/lidarr/app/helmrelease.yaml
+++ b/kubernetes/apps/default/lidarr/app/helmrelease.yaml
@@ -30,6 +30,16 @@ spec:
         annotations:
           reloader.stakater.com/auto: "true"
         initContainers:
+          change-ownership:
+            image:
+              repository: alpine
+              tag: 3.21.2@sha256:56fa17d2a7e7f168a043a2712e63aed1f8543aeafdcee47c58dcffe38ed51099
+            command: ["sh", "-c"]
+            args: >-
+              cp /secret/config.xml /config/config.xml; chown $PUID:$PGID /config/config.xml;
+            env:
+              PUID: 1000
+              PGID: 1000
           init-db:
             image:
               repository: ghcr.io/solanyn/postgres-init
@@ -104,6 +114,12 @@ spec:
     persistence:
       config:
         existingClaim: *app
+      config-file:
+        type: secret
+        name: lidarr-secret
+        globalMounts:
+          - path: /secret/config.xml
+            subPath: config.xml
       tmp:
         type: emptyDir
       media:
