--- a/kubernetes/apps/default/readarr-ab/app/helmrelease.yaml
+++ b/kubernetes/apps/default/readarr-ab/app/helmrelease.yaml
@@ -30,6 +30,16 @@ spec:
         annotations:
           reloader.stakater.com/auto: "true"
         initContainers:
+          change-ownership:
+            image:
+              repository: alpine
+              tag: 3.21.2@sha256:56fa17d2a7e7f168a043a2712e63aed1f8543aeafdcee47c58dcffe38ed51099
+            command: ["sh", "-c"]
+            args: >-
+              cp /secret/config.xml /config/config.xml; chown $PUID:$PGID /config/config.xml;
+            env:
+              PUID: 1000
+              PGID: 1000
           init-db:
             image:
               repository: ghcr.io/solanyn/postgres-init
@@ -43,6 +53,7 @@ spec:
               repository: ghcr.io/solanyn/readarr-develop
               tag: 0.4.10.2734@sha256:39f122027752f61da43b01bcb737164e5f860620c8239a1d5ce1a5b1edf40081
             env:
+              # NOTE: Environment variables only work because onedr0p containers do some cool things to turn ENV variables to config.xml
               READARR__APP__INSTANCENAME: Readarr Audiobooks
               READARR__APP__THEME: dark
               READARR__AUTH__METHOD: External
@@ -102,6 +113,13 @@ spec:
     persistence:
       config:
         existingClaim: readarr-ab
+      # NOTE: While ENV variable config is not available
+      config-file:
+        type: secret
+        name: readarr-ab-secret
+        globalMounts:
+          - path: /secret/config.xml
+            subPath: config.xml
       tmp:
         type: emptyDir
         sizeLimit: 1Gi
