--- a/kubernetes/apps/kubeflow-system/argo-cd/app/kustomization.yaml
+++ b/kubernetes/apps/kubeflow-system/argo-cd/app/kustomization.yaml
@@ -2,9 +2,5 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: kubeflow-system
-components:
-  - ../../flux/components/common
 resources:
-  - ./argo-cd/ks.yaml
-  - ./deploykf/ks.yaml
+  - ./helmrelease.yaml
