--- a/kubernetes/bootstrap/apps/helmfile.yaml
+++ b/kubernetes/bootstrap/apps/helmfile.yaml
@@ -14,26 +14,24 @@ repositories:
   - name: jetstack
     url: https://charts.jetstack.io
 
-releases:
-  - name: prometheus-operator-crds
-    namespace: kube-system
-    chart: oci://ghcr.io/prometheus-community/charts/prometheus-operator-crds
-    version: 18.0.0
-    values:
-      - crds:
-          annotations:
-            helm.sh/resource-policy: keep
+hooks:
+  - events: ['prepare']
+    command: bash
+    args: ['{{ requiredEnv "KUBERNETES_DIR" }}/bootstrap/apps/hooks/prometheus-operator-crds.sh']
+  - events: ['prepare']
+    command: bash
+    args: ['{{ requiredEnv "KUBERNETES_DIR" }}/bootstrap/apps/hooks/wipe-csi-disk.sh']
 
+releases:
   - name: cilium
     namespace: kube-system
     chart: cilium/cilium
     version: 1.17.0
     values: ['{{ requiredEnv "KUBERNETES_DIR" }}/apps/kube-system/cilium/app/helm-values.yaml']
     hooks:
-      - events: ["postsync"]
+      - events: ['postsync']
         command: bash
-        args: ['{{ requiredEnv "KUBERNETES_DIR" }}/bootstrap/apps/scripts/cilium-postsync.sh']
-    needs: ['kube-system/prometheus-operator-crds']
+        args: ['{{ requiredEnv "KUBERNETES_DIR" }}/bootstrap/apps/hooks/cilium-config.sh']
 
   - name: coredns
     namespace: kube-system
@@ -56,19 +54,12 @@ releases:
     values: ['{{ requiredEnv "KUBERNETES_DIR" }}/apps/external-secrets/external-secrets/app/helm-values.yaml']
     needs: ['cert-manager/cert-manager']
 
-  - name: wipe-rook
-    namespace: kube-system
-    chart: oci://ghcr.io/bjw-s/helm/app-template
-    version: 3.7.0
-    values: ['{{ requiredEnv "KUBERNETES_DIR" }}/bootstrap/apps/templates/wipe-rook.yaml.gotmpl']
-    needs: ['external-secrets/external-secrets']
-
   - name: flux-operator
     namespace: flux-system
     chart: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-operator
     version: 0.13.0
     values: ['{{ requiredEnv "KUBERNETES_DIR" }}/apps/flux-system/flux-operator/app/helm-values.yaml']
-    needs: ['kube-system/wipe-rook']
+    needs: ['external-secrets/external-secrets']
 
   - name: flux-instance
     namespace: flux-system
