--- a/kubernetes/apps/kubeflow-system/argocd/app/helmrelease.yaml
+++ b/kubernetes/apps/kubeflow-system/argocd/app/helmrelease.yaml
@@ -2,12 +2,12 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: argo-cd
+  name: argocd
 spec:
   interval: 30m
   chart:
     spec:
-      chart: argo-cd
+      chart: argocd
       version: 7.8.2
       sourceRef:
         kind: HelmRepository
