--- a/kubernetes/apps/kubeflow-system/argocd/ks.yaml
+++ b/kubernetes/apps/kubeflow-system/argocd/ks.yaml
@@ -3,14 +3,14 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app argo-cd
+  name: &app argocd
   namespace: &namespace kubeflow-system
 spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
   interval: 30m
-  path: ./kubernetes/apps/kubeflow-system/argo-cd/app
+  path: ./kubernetes/apps/kubeflow-system/argocd/app
   prune: false
   sourceRef:
     kind: GitRepository
