--- a/kubernetes/apps/kubeflow-system/deploykf/ks.yaml
+++ b/kubernetes/apps/kubeflow-system/deploykf/ks.yaml
@@ -9,8 +9,15 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
+  dependsOn:
+    - name: onepassword-store
+      namespace: external-secrets
+    - name: mariadb-cluster
+      namespace: database
+    - name: argocd
+      namespace: kubeflow-system
   interval: 30m
-  path: ./kubernetes/apps/kubeflow-system/argo-cd/app
+  path: ./kubernetes/apps/kubeflow-system/deploykf/app
   prune: false
   sourceRef:
     kind: GitRepository
