--- a/kubernetes/apps/kubeflow-system/kustomization.yaml
+++ b/kubernetes/apps/kubeflow-system/kustomization.yaml
@@ -6,5 +6,5 @@ namespace: kubeflow-system
 components:
   - ../../flux/components/common
 resources:
-  - ./argo-cd/ks.yaml
+  - ./argocd/ks.yaml
   - ./deploykf/ks.yaml
