--- a/kubernetes/apps/kubeflow-system/argocd/app/helmrelease.yaml
+++ b/kubernetes/apps/kubeflow-system/argocd/app/helmrelease.yaml
@@ -7,7 +7,7 @@ spec:
   interval: 30m
   chart:
     spec:
-      chart: argocd
+      chart: argo-cd
       version: 7.8.2
       sourceRef:
         kind: HelmRepository
