--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -39,5 +39,5 @@ resources:
   - ./tautulli/ks.yaml
   - ./thelounge/ks.yaml
   - ./your-spotify/ks.yaml
-  # - ./zigbee/ks.yaml
+  - ./zigbee/ks.yaml
   - ./zwave/ks.yaml
