--- a/kubernetes/apps/default/zigbee/app/externalsecret.yaml
+++ b/kubernetes/apps/default/zigbee/app/externalsecret.yaml
@@ -14,10 +14,9 @@ spec:
       data:
         # ZIGBEE2MQTT_CONFIG_ADVANCED_EXT_PAN_ID: "{{ .ZIGBEE2MQTT_CONFIG_ADVANCED_EXT_PAN_ID }}"
         # ZIGBEE2MQTT_CONFIG_ADVANCED_PAN_ID: "{{ .ZIGBEE2MQTT_CONFIG_ADVANCED_PAN_ID }}"
-        # ZIGBEE2MQTT_CONFIG_ADVANCED_NETWORK_KEY: "{{ .ZIGBEE2MQTT_CONFIG_ADVANCED_NETWORK_KEY }}"
+        ZIGBEE2MQTT_CONFIG_ADVANCED_NETWORK_KEY: "{{ .ZIGBEE2MQTT_CONFIG_ADVANCED_NETWORK_KEY }}"
         ZIGBEE2MQTT_CONFIG_ADVANCED_EXT_PAN_ID: "GENERATE"
         ZIGBEE2MQTT_CONFIG_ADVANCED_PAN_ID: "GENERATE"
-        ZIGBEE2MQTT_CONFIG_ADVANCED_NETWORK_KEY: "GENERATE"
         ZIGBEE2MQTT_CONFIG_MQTT_USER: "{{ .X_EMQX_MQTT_USERNAME }}"
         ZIGBEE2MQTT_CONFIG_MQTT_PASSWORD: "{{ .X_EMQX_MQTT_PASSWORD }}"
   dataFrom:
