--- a/kubernetes/apps/kubeflow-system/deploykf/app/database.yaml
+++ b/kubernetes/apps/kubeflow-system/deploykf/app/database.yaml
@@ -6,6 +6,7 @@ metadata:
 spec:
   mariaDbRef:
     name: mariadb-cluster
+    namespace: database
   cleanupPolicy: Delete
   requeueInterval: 30s
   retryInterval: 5s
@@ -18,6 +19,7 @@ spec:
   name: kfp_cache
   mariaDbRef:
     name: mariadb-cluster
+    namespace: database
   cleanupPolicy: Delete
   requeueInterval: 30s
   retryInterval: 5s
@@ -30,6 +32,7 @@ spec:
   name: kfp_metadata
   mariaDbRef:
     name: mariadb-cluster
+    namespace: database
   cleanupPolicy: Delete
   requeueInterval: 30s
   retryInterval: 5s
@@ -42,6 +45,7 @@ spec:
   name: kfp_pipelines
   mariaDbRef:
     name: mariadb-cluster
+    namespace: database
   cleanupPolicy: Delete
   requeueInterval: 30s
   retryInterval: 5s
