fix: add value to secret

--- a/kubernetes/apps/kubeflow-system/deploykf/app/externalsecret.yaml
+++ b/kubernetes/apps/kubeflow-system/deploykf/app/externalsecret.yaml
@@ -15,6 +15,7 @@ spec:
           clientID: "{{ .DEPLOYKF_CLIENT_ID }}"
           clientSecret: "{{ .DEPLOYKF_CLIENT_SECRET }}"
           redirectURI: "https://kubeflow.goyangi.cloud/dex/callback"
+        MARIADB_KUBEFLOW_PASSWORD: "{{ .MARIADB_KUBEFLOW_PASSWORD }}"
   dataFrom:
     - extract:
         key: deploykf
