--- a/kubernetes/apps/kubeflow-system/deploykf/app/application.yaml
+++ b/kubernetes/apps/kubeflow-system/deploykf/app/application.yaml
@@ -7,7 +7,7 @@ metadata:
     app.kubernetes.io/name: deploykf-app-of-apps
     app.kubernetes.io/part-of: deploykf
 spec:
-  project: &project "kubeflow"
+  project: "default"
   source:
     repoURL: "https://github.com/solanyn/home-ops.git"
     targetRevision: "main"
