--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -22,6 +22,7 @@ resources:
   - ./kopia/ks.yaml
   - ./lidarr/ks.yaml
   - ./maintainerr/ks.yaml
+  - ./miniflux/ks.yaml
   - ./minio/ks.yaml
   - ./oauth2-proxy/ks.yaml
   - ./open-webui/ks.yaml
