--- a/kubernetes/apps/default/miniflux/ks.yaml
+++ b/kubernetes/apps/default/miniflux/ks.yaml
@@ -8,6 +8,8 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
+  components:
+    - ../../../../flux/components/gatus/guarded
   dependsOn:
     - name: cloudnative-pg-cluster
       namespace: database
