--- a/kubernetes/apps/default/miniflux/app/externalsecret.yaml
+++ b/kubernetes/apps/default/miniflux/app/externalsecret.yaml
@@ -6,11 +6,10 @@ metadata:
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
-    name: onepassword-connect
+    name: onepassword
   target:
     name: miniflux-secret
     template:
-      engineVersion: v2
       data:
         ADMIN_USERNAME: "{{ .MINIFLUX_ADMIN_USERNAME }}"
         ADMIN_PASSWORD: "{{ .MINIFLUX_ADMIN_PASSWORD }}"
