--- a/kubernetes/flux/meta/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/meta/repositories/helm/kustomization.yaml
@@ -3,6 +3,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - ./airflow.yaml
   - ./actions-runner-controller.yaml
   - ./backube.yaml
   - ./bjw-s.yaml
@@ -15,11 +16,13 @@ resources:
   - ./emqx.yaml
   - ./external-dns.yaml
   - ./external-secrets.yaml
+  - ./flyteorg.yaml
   - ./grafana.yaml
   - ./headlamp.yaml
   - ./ingress-nginx.yaml
   - ./intel.yaml
   - ./jetstack.yaml
+  - ./jupyterhub.yaml
   - ./kafka.yaml
   - ./metrics-server.yaml
   - ./node-feature-discovery.yaml
@@ -27,6 +30,7 @@ resources:
   - ./piraeus.yaml
   - ./prometheus-community.yaml
   - ./rook-ceph.yaml
+  - ./seldonio.yaml
   - ./spegel.yaml
   - ./stakater.yaml
   - ./tailscale.yaml
