--- a/kubernetes/flux/meta/repositories/helm/airflow.yaml
+++ b/kubernetes/flux/meta/repositories/helm/airflow.yaml
@@ -3,7 +3,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: backube
+  name: airflow
   namespace: flux-system
 spec:
   interval: 12h
