feat(binderhub): set resources

--- a/kubernetes/apps/ml-system/binderhub/app/helmrelease.yaml
+++ b/kubernetes/apps/ml-system/binderhub/app/helmrelease.yaml
@@ -44,4 +44,8 @@ spec:
     config:
       BinderHub:
         hub_url: https://jupyterhub.goyangi.cloud
+    resources:
+      requests:
+        cpu: 10m
+        memory: 256Mi
 
