--- a/kubernetes/apps/database/dragonfly/cluster/cluster.yaml
+++ b/kubernetes/apps/database/dragonfly/cluster/cluster.yaml
@@ -25,6 +25,7 @@ spec:
     limits:
       memory: 512Mi
   serviceSpec:
+    name: redis
     type: LoadBalancer
     annotations:
       lbipam.cilium.io/ips: 192.168.1.123
