--- a/kubernetes/bootstrap/apps/helmfile.yaml
+++ b/kubernetes/bootstrap/apps/helmfile.yaml
@@ -16,11 +16,8 @@ repositories:
 
 hooks:
   - events: ['prepare']
-    command: bash
-    args: ['{{ requiredEnv "KUBERNETES_DIR" }}/bootstrap/apps/hooks/prometheus-operator-crds.sh']
-  - events: ['prepare']
-    command: bash
-    args: ['{{ requiredEnv "KUBERNETES_DIR" }}/bootstrap/apps/hooks/wipe-csi-disk.sh']
+    command: '{{ requiredEnv "KUBERNETES_DIR" }}/bootstrap/apps/resources/prepare.sh'
+    showlogs: true
 
 releases:
   - name: cilium
@@ -28,10 +25,6 @@ releases:
     chart: cilium/cilium
     version: 1.17.0
     values: ['{{ requiredEnv "KUBERNETES_DIR" }}/apps/kube-system/cilium/app/helm-values.yaml']
-    hooks:
-      - events: ['postsync']
-        command: bash
-        args: ['{{ requiredEnv "KUBERNETES_DIR" }}/bootstrap/apps/hooks/cilium-config.sh']
 
   - name: coredns
     namespace: kube-system
@@ -65,6 +58,6 @@ releases:
     namespace: flux-system
     chart: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-instance
     version: 0.13.0
-    wait: false
     values: ['{{ requiredEnv "KUBERNETES_DIR" }}/apps/flux-system/flux-operator/instance/helm-values.yaml']
     needs: ['flux-system/flux-operator']
+    wait: false
