chore: rename binderhub -> binder

--- a/kubernetes/apps/ml-system/kustomization.yaml
+++ b/kubernetes/apps/ml-system/kustomization.yaml
@@ -6,7 +6,8 @@ namespace: ml-system
 components:
   - ../../flux/components/common
 resources:
-  - ./binderhub/ks.yaml
+  - ./binder/ks.yaml
   # - ./flyte/ks.yaml
+  # - ./jupyter/ks.yaml
   # - ./mlflow/ks.yaml
   # - ./seldon-core/ks.yaml
