--- a/kubernetes/apps/ml-system/binder/app/helmrelease.yaml
+++ b/kubernetes/apps/ml-system/binder/app/helmrelease.yaml
@@ -2,7 +2,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: binderhub
+  name: binder
 spec:
   interval: 30m
   chart:
@@ -29,10 +29,10 @@ spec:
       annotations:
         kubernetes.io/ingress.class: internal
       hosts:
-        - binderhub.goyangi.cloud
+        - binder.goyangi.cloud
     config:
       BinderHub:
-        hub_url: https://jupyterhub.goyangi.cloud
+        hub_url: https://binder.goyangi.cloud
     resources:
       requests:
         cpu: 10m
