--- a/kubernetes/apps/ml-system/binder/ks.yaml
+++ b/kubernetes/apps/ml-system/binder/ks.yaml
@@ -3,15 +3,20 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app binderhub
+  name: &app binder
   namespace: &namespace ml-system
 spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
+  components:
+    - ../../../../flux/components/gatus/guarded
   interval: 30m
-  path: ./kubernetes/apps/ml-system/binderhub/app
+  path: ./kubernetes/apps/ml-system/binder/app
   prune: false
+  postBuild:
+    substitute:
+      APP: *app
   sourceRef:
     kind: GitRepository
     name: flux-system
