feat: deploy jupyterhub

--- a/kubernetes/apps/ml-system/kustomization.yaml
+++ b/kubernetes/apps/ml-system/kustomization.yaml
@@ -8,6 +8,6 @@ components:
 resources:
   - ./binder/ks.yaml
   # - ./flyte/ks.yaml
-  # - ./jupyter/ks.yaml
+  - ./jupyter/ks.yaml
   # - ./mlflow/ks.yaml
   # - ./seldon-core/ks.yaml
