--- a/kubernetes/apps/ml-system/binder/app/helmrelease.yaml
+++ b/kubernetes/apps/ml-system/binder/app/helmrelease.yaml
@@ -37,4 +37,10 @@ spec:
       requests:
         cpu: 10m
         memory: 256Mi
+    imageBuilderType: dind
+    dind:
+      daemonset:
+        image:
+          name: docker
+          tag: 18.09.2-dind
 
