--- a/kubernetes/apps/ml-system/jupyter/ks.yaml
+++ b/kubernetes/apps/ml-system/jupyter/ks.yaml
@@ -9,9 +9,14 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
+  components:
+    - ../../../../flux/components/gatus/guarded
   interval: 30m
   path: ./kubernetes/apps/ml-system/jupyter/app
   prune: false
+  postBuild:
+    substitute:
+      APP: *app
   sourceRef:
     kind: GitRepository
     name: flux-system
