fix(binder): use ingressClassName

--- a/kubernetes/apps/ml-system/binder/app/helmrelease.yaml
+++ b/kubernetes/apps/ml-system/binder/app/helmrelease.yaml
@@ -26,8 +26,7 @@ spec:
       type: ClusterIP
     ingress:
       enabled: true
-      annotations:
-        kubernetes.io/ingress.class: internal
+      ingressClassName: internal
       hosts:
         - binder.goyangi.cloud
     config:
