--- a/kubernetes/apps/observability/unpoller/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/unpoller/app/helmrelease.yaml
@@ -34,7 +34,7 @@ spec:
               tag: v2.14.1@sha256:9ba73b1793ef332ae9b4b719ef0fc09f231d6276bc7b721cbb47961ed7792961
             env:
               TZ: Australia/Sydney
-              UP_UNIFI_DEFAULT_URL: https://192.168.1.1
+              UP_UNIFI_DEFAULT_URL: http://192.168.1.1
               UP_UNIFI_DEFAULT_VERIFY_SSL: false
               UP_INFLUXDB_DISABLE: true
             envFrom:
