fix: missing quote

--- a/kubernetes/apps/ml-system/jupyter/app/externalsecret.yaml
+++ b/kubernetes/apps/ml-system/jupyter/app/externalsecret.yaml
@@ -12,6 +12,12 @@ spec:
     template:
       data:
         values.yaml: |
+          singleuser:
+            defaultUrl: "/lab"
+            extraEnv:
+              JUPYTERHUB_SINGLEUSER_APP: "jupyter_server.serverapp.ServerApp"
+            memory:
+              limit: 16G
           fullnameOverride: jupyter
           hub:
             config:
@@ -30,7 +36,7 @@ spec:
                 token_url: https://id.goyangi.cloud/api/oidc/token
                 userdata_url: https://id.goyangi.cloud/api/oidc/userinfo
                 login_service: Pocket ID
-                username_claim: "email
+                username_claim: "email"
                 userdata_params:
                   state: state
                 allow_all: true
