fix(jupyter): add security context to initContainer

--- a/kubernetes/apps/ml-system/jupyter/app/externalsecret.yaml
+++ b/kubernetes/apps/ml-system/jupyter/app/externalsecret.yaml
@@ -60,6 +60,8 @@ spec:
                     value: "{{ .JUPYTER_POSTGRES_PASS }}"
                   - name: INIT_POSTGRES_SUPER_PASS
                     value: "{{ .POSTGRES_SUPER_PASS }}"
+                securityContext:
+                  runAsUser: 1000
             resources:
               requests:
                 cpu: 10m
