--- a/kubernetes/apps/ml-system/jupyter/app/externalsecret.yaml
+++ b/kubernetes/apps/ml-system/jupyter/app/externalsecret.yaml
@@ -62,6 +62,8 @@ spec:
                     value: "{{ .POSTGRES_SUPER_PASS }}"
                 securityContext:
                   runAsUser: 1000
+                  runAsGroup: 1000
+                  fsGroup: 1000
             resources:
               requests:
                 cpu: 10m
