--- a/kubernetes/apps/ml-system/jupyter/app/externalsecret.yaml
+++ b/kubernetes/apps/ml-system/jupyter/app/externalsecret.yaml
@@ -60,6 +60,8 @@ spec:
                     value: "{{ .JUPYTER_POSTGRES_PASS }}"
                   - name: INIT_POSTGRES_SUPER_PASS
                     value: "{{ .POSTGRES_SUPER_PASS }}"
+                  - name: INIT_POSTGRES_SUPER_USER
+                    value: "{{ .POSTGRES_SUPER_USER }}"
                 securityContext:
                   runAsUser: 1000
                   runAsGroup: 1000
