--- a/kubernetes/apps/ml-system/mlflow/ks.yaml
+++ b/kubernetes/apps/ml-system/mlflow/ks.yaml
@@ -14,6 +14,9 @@ spec:
   interval: 30m
   path: ./kubernetes/apps/ml-system/mlflow/app
   prune: false
+  postBuild:
+    substitute:
+      APP: *app
   sourceRef:
     kind: GitRepository
     name: flux-system
