fix: update config

--- a/kubernetes/apps/ml-system/jupyter/app/externalsecret.yaml
+++ b/kubernetes/apps/ml-system/jupyter/app/externalsecret.yaml
@@ -16,8 +16,21 @@ spec:
             defaultUrl: "/lab"
             extraEnv:
               JUPYTERHUB_SINGLEUSER_APP: "jupyter_server.serverapp.ServerApp"
+            cpu:
+              guarantee: 10m
             memory:
               limit: 16G
+            # required for pytorch
+            storage:
+              dynamic:
+                storageClass: ceph-block
+              extraVolumes:
+                - name: shm-volume
+                  emptyDir:
+                    medium: Memory
+              extraVolumeMounts:
+                - name: shm-volume
+                  mountPath: /dev/shm
           fullnameOverride: jupyter
           hub:
             config:
@@ -44,8 +57,7 @@ spec:
                   - admin
             db:
               type: postgres
-              url: "postgresql+psycopg2://{{.JUPYTER_POSTGRES_USER}}:{{.JUPYTER_POSTGRES_PASS}}@postgres16-rw.database.svc.cluster.local:5432/jupyter"
-              password: "{{.JUPYTER_POSTGRES_PASS}}"
+              url: "postgresql+psycopg2://{{ .JUPYTER_POSTGRES_USER }}:{{ .JUPYTER_POSTGRES_PASS }}@postgres16-rw.database.svc.cluster.local:5432/jupyter"
             initContainers:
               - name: init-db
                 image: ghcr.io/solanyn/postgres-init:16
