fix: secret name

--- a/kubernetes/apps/ml-system/jupyter/app/externalsecret.yaml
+++ b/kubernetes/apps/ml-system/jupyter/app/externalsecret.yaml
@@ -37,7 +37,7 @@ spec:
                   - admin
             db:
               type: postgres
-              url: "postgresql+psycopg2://{{ .SUPER_POSTGRES_USER }}:{{ .SUPER_POSTGRES_PASS }}@postgres16-rw.database.svc.cluster.local:5432/jupyter"
+              url: "postgresql+psycopg2://{{ .POSTGRES_SUPER_USER }}:{{ .POSTGRES_SUPER_PASS }}@postgres16-rw.database.svc.cluster.local:5432/jupyter"
             resources:
               requests:
                 cpu: 10m
