fix: move values back to secret

--- a/kubernetes/apps/ml-system/jupyter/app/externalsecret.yaml
+++ b/kubernetes/apps/ml-system/jupyter/app/externalsecret.yaml
@@ -12,6 +12,34 @@ spec:
     template:
       data:
         values.yaml: |
+          fullnameOverride: jupyter
+          singleuser:
+            defaultUrl: "/lab"
+            extraEnv:
+              JUPYTERHUB_SINGLEUSER_APP: "jupyter_server.serverapp.ServerApp"
+            cpu:
+              guarantee: 0.010
+            memory:
+              limit: 16G
+            # required for pytorch
+            storage:
+              dynamic:
+                storageClass: ceph-block
+              extraVolumes:
+                - name: shm-volume
+                  emptyDir:
+                    medium: Memory
+              extraVolumeMounts:
+                - name: shm-volume
+                  mountPath: /dev/shm
+          ingress:
+            enabled: true
+            ingressClassName: internal
+            hosts: ["jupyter.goyangi.cloud"]
+          cull:
+            enabled: true
+            users: true
+            adminUsers: true
           hub:
             config:
               JupyterHub:
