--- a/kubernetes/apps/ml-system/jupyter/app/externalsecret.yaml
+++ b/kubernetes/apps/ml-system/jupyter/app/externalsecret.yaml
@@ -24,7 +24,7 @@ spec:
             # required for pytorch
             storage:
               dynamic:
-                storageClass: ceph-block
+                storageClass: openebs-hostpath
               extraVolumes:
                 - name: shm-volume
                   emptyDir:
@@ -64,8 +64,29 @@ spec:
                 admin_users:
                   - admin
             db:
+              upgrade: true
               type: postgres
-              url: "postgresql+psycopg2://{{ .POSTGRES_SUPER_USER }}:{{ .POSTGRES_SUPER_PASS }}@postgres16-rw.database.svc.cluster.local:5432/jupyter"
+              url: "postgresql+psycopg2://{{ .JUPYTER_POSTGRES_USER }}:{{ .JUPYTER_POSTGRES_PASSWORD }}@postgres16-rw.database.svc.cluster.local:5432/jupyter"
+            initContainers:
+              - name: init-db
+                image: ghcr.io/solanyn/postgres-init:16
+                env:
+                  - name: INIT_POSTGRES_DBNAME
+                    value: "jupyter"
+                  - name: INIT_POSTGRES_HOST
+                    value: "postgres16-rw.database.svc.cluster.local"
+                  - name: INIT_POSTGRES_USER
+                    value: "{{ .JUPYTER_POSTGRES_USER }}"
+                  - name: INIT_POSTGRES_PASS
+                    value: "{{ .JUPYTER_POSTGRES_PASS }}"
+                  - name: INIT_POSTGRES_SUPER_PASS
+                    value: "{{ .POSTGRES_SUPER_PASS }}"
+                  - name: INIT_POSTGRES_SUPER_USER
+                    value: "{{ .POSTGRES_SUPER_USER }}"
+                securityContext:
+                  runAsUser: 1000
+                  runAsGroup: 1000
+                  fsGroup: 1000
             resources:
               requests:
                 cpu: 10m
