fix: secret value

--- a/kubernetes/apps/ml-system/jupyter/app/externalsecret.yaml
+++ b/kubernetes/apps/ml-system/jupyter/app/externalsecret.yaml
@@ -78,7 +78,7 @@ spec:
                   - name: INIT_POSTGRES_USER
                     value: "{{ .JUPYTER_POSTGRES_USER }}"
                   - name: INIT_POSTGRES_PASS
-                    value: "{{ .JUPYTER_POSTGRES_PASS }}"
+                    value: "{{ .JUPYTER_POSTGRES_PASSWORD }}"
                   - name: INIT_POSTGRES_SUPER_PASS
                     value: "{{ .POSTGRES_SUPER_PASS }}"
                   - name: INIT_POSTGRES_SUPER_USER
