fix: debug init

--- a/kubernetes/apps/ml-system/jupyter/app/externalsecret.yaml
+++ b/kubernetes/apps/ml-system/jupyter/app/externalsecret.yaml
@@ -70,6 +70,7 @@ spec:
             initContainers:
               - name: init-db
                 image: ghcr.io/solanyn/postgres-init:16
+                command: ["sleep", "infinity"]
                 env:
                   - name: INIT_POSTGRES_DBNAME
                     value: "jupyter"
