feat(jupyter): add reloader

--- a/kubernetes/apps/ml-system/jupyter/app/externalsecret.yaml
+++ b/kubernetes/apps/ml-system/jupyter/app/externalsecret.yaml
@@ -41,6 +41,8 @@ spec:
             users: true
             adminUsers: true
           hub:
+            annotations:
+              reloader.stakater.com/auto: "true"
             config:
               JupyterHub:
                 admin_access: true
