--- a/kubernetes/apps/ml-system/jupyter/app/externalsecret.yaml
+++ b/kubernetes/apps/ml-system/jupyter/app/externalsecret.yaml
@@ -72,7 +72,7 @@ spec:
             initContainers:
               - name: init-db
                 image: ghcr.io/solanyn/postgres-init:16
-                command: ["sleep", "infinity"]
+                command: ["psql", "--tuples-only", "--csv", "--command", "\"select * from pg_roles\""]
                 env:
                   - name: INIT_POSTGRES_DBNAME
                     value: "jupyter"
