--- a/kubernetes/apps/ml-system/mlflow/ks.yaml
+++ b/kubernetes/apps/ml-system/mlflow/ks.yaml
@@ -11,6 +11,11 @@ spec:
       app.kubernetes.io/name: *app
   components:
     - ../../../../flux/components/gatus/guarded
+  dependsOn:
+    - name: onepassword-store
+      namespace: external-secrets
+    - name: cloudnative-pg-cluster
+      namespace: database
   interval: 30m
   path: ./kubernetes/apps/ml-system/mlflow/app
   prune: false
