--- a/kubernetes/apps/ml-system/mlflow/app/helmrelease.yaml
+++ b/kubernetes/apps/ml-system/mlflow/app/helmrelease.yaml
@@ -23,7 +23,7 @@ spec:
       retries: 3
   values:
     controllers:
-      pocket-id:
+      mlflow:
         annotations:
           reloader.stakater.com/auto: "true"
         initContainers:
