--- a/kubernetes/apps/ml-system/jupyter/app/externalsecret.yaml
+++ b/kubernetes/apps/ml-system/jupyter/app/externalsecret.yaml
@@ -86,9 +86,13 @@ spec:
                   - name: INIT_POSTGRES_SUPER_USER
                     value: "{{ .POSTGRES_SUPER_USER }}"
                 securityContext:
+                  runAsNonRoot: true
                   runAsUser: 1000
                   runAsGroup: 1000
                   fsGroup: 1000
+                  fsGroupChangePolicy: OnRootMismatch
+                  seccompProfile: {type: RuntimeDefault}
+                  supplementalGroups: [10000]
             resources:
               requests:
                 cpu: 10m
