--- a/kubernetes/apps/ml-system/jupyter/app/externalsecret.yaml
+++ b/kubernetes/apps/ml-system/jupyter/app/externalsecret.yaml
@@ -70,6 +70,9 @@ spec:
               type: postgres
               url: "postgresql+psycopg2://{{ .JUPYTER_POSTGRES_USER }}:{{ .JUPYTER_POSTGRES_PASSWORD }}@postgres16-rw.database.svc.cluster.local:5432/jupyter"
             initContainers:
+              - name: test-init
+                image: busybox
+                command: ['sh', '-c', 'until nslookup postgres16-rw.database.svc.cluster.local; do echo waiting for postgres16-rw.database.svc.cluster.local; sleep 10; done;']
               - name: init-db
                 image: ghcr.io/solanyn/postgres-init:16
                 env:
