--- a/kubernetes/apps/ml-system/mlflow/app/externalsecret.yaml
+++ b/kubernetes/apps/ml-system/mlflow/app/externalsecret.yaml
@@ -11,22 +11,21 @@ spec:
     name: mlflow-secret
     template:
       data:
-        INIT_POSTGRES_DBNAME: mlflow_backend mlflow_registry
-        INIT_POSTGRES_HOST: postgres16-rw.database.svc.cluster.local
-        INIT_POSTGRES_USER: mlflow
+        INIT_POSTGRES_DBNAME: "mlflow"
+        INIT_POSTGRES_HOST: "postgres16-rw.database.svc.cluster.local"
+        INIT_POSTGRES_USER: "mlflow"
         INIT_POSTGRES_PASS: "{{ .MLFLOW_POSTGRES_PASSWORD }}"
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
         MLFLOW_TRACKING_USERNAME: "{{ .MLFLOW_TRACKING_USERNAME }}"
         MLFLOW_TRACKING_PASSWORD: "{{ .MLFLOW_TRACKING_PASSWORD }}"
-        MLFLOW_BACKEND_STORE_URI: "postgres://{{ .MLFLOW_POSTGRES_USER }}:{{ .MLFLOW_POSTGRES_PASSWORD }}@postgres16-rw.database.svc.cluster.local:5432/mlflow_backend"
-        MLFLOW_REGISTRY_STORE_URI: "postgres://{{ .MLFLOW_POSTGRES_USER }}:{{ .MLFLOW_POSTGRES_PASSWORD }}@postgres16-rw.database.svc.cluster.local:5432/mlflow_registry"
-        MLFLOW_AUTH_CONFIG_PATH: /config/auth.ini
-        MLFLOW_S3_ENDPOINT_URL: http://minio.default.svc.cluster.local:9000
+        MLFLOW_BACKEND_STORE_URI: "postgresql://{{ .MLFLOW_POSTGRES_USER }}:{{ .MLFLOW_POSTGRES_PASSWORD }}@postgres16-rw.database.svc.cluster.local:5432/mlflow"
+        MLFLOW_AUTH_CONFIG_PATH: "/config/auth.ini"
+        MLFLOW_S3_ENDPOINT_URL: "http://minio.default.svc.cluster.local:9000"
         AWS_ACCESS_KEY_ID: "{{ .MINIO_ROOT_USER }}"
         AWS_SECRET_ACCESS_KEY: "{{ .MINIO_ROOT_PASSWORD }}"
         auth.ini: |
           [mlflow]
-          database_uri = "postgres://{{ .MLFLOW_POSTGRES_USER }}:{{ .MLFLOW_POSTGRES_PASSWORD }}@postgres16-rw.database.svc.cluster.local:5432/mlflow_auth"
+          database_uri = "postgresql://{{ .MLFLOW_POSTGRES_USER }}:{{ .MLFLOW_POSTGRES_PASSWORD }}@postgres16-rw.database.svc.cluster.local:5432/mlflow_auth"
   dataFrom:
     - extract:
         key: cloudnative-pg
