fix: test with securityContext

--- a/kubernetes/apps/ml-system/jupyter/app/externalsecret.yaml
+++ b/kubernetes/apps/ml-system/jupyter/app/externalsecret.yaml
@@ -73,6 +73,14 @@ spec:
               - name: test-init
                 image: busybox
                 command: ['sh', '-c', 'until nslookup postgres16-rw.database.svc.cluster.local; do echo waiting for postgres16-rw.database.svc.cluster.local; sleep 10; done;']
+                securityContext:
+                  runAsNonRoot: true
+                  runAsUser: 1000
+                  runAsGroup: 1000
+                  fsGroup: 1000
+                  fsGroupChangePolicy: OnRootMismatch
+                  seccompProfile: {type: RuntimeDefault}
+                  supplementalGroups: [10000]
               - name: init-db
                 image: ghcr.io/solanyn/postgres-init:16
                 env:
