fix: add netpol to cluster

--- a/kubernetes/apps/ml-system/jupyter/app/externalsecret.yaml
+++ b/kubernetes/apps/ml-system/jupyter/app/externalsecret.yaml
@@ -65,6 +65,15 @@ spec:
                 allow_all: true
                 admin_users:
                   - admin
+            networkPolicy:
+              egress:
+                - to:
+                    - podSelector:
+                        matchLabels:
+                          cnpg.io/cluster: postgres16
+                  ports:
+                    - protocol: TCP
+                      port: 5432
             db:
               upgrade: true
               type: postgres
