fix: disable netpol

--- a/kubernetes/apps/ml-system/jupyter/app/externalsecret.yaml
+++ b/kubernetes/apps/ml-system/jupyter/app/externalsecret.yaml
@@ -41,6 +41,8 @@ spec:
             users: true
             adminUsers: true
           hub:
+            networkPolicy:
+              enabled: false
             annotations:
               reloader.stakater.com/auto: "true"
             config:
@@ -65,15 +67,6 @@ spec:
                 allow_all: true
                 admin_users:
                   - admin
-            networkPolicy:
-              egress:
-                - to:
-                    - podSelector:
-                        matchLabels:
-                          cnpg.io/cluster: postgres16
-                  ports:
-                    - protocol: TCP
-                      port: 5432
             db:
               upgrade: true
               type: postgres
