--- a/kubernetes/apps/kube-system/system-upgrade/plans/kubernetes.yaml
+++ b/kubernetes/apps/kube-system/system-upgrade/plans/kubernetes.yaml
@@ -6,28 +6,21 @@ metadata:
   name: kubernetes
 spec:
   version: ${KUBERNETES_VERSION}
+  concurrency: 1
+  postCompleteDelay: 30s
+  exclusive: true
   serviceAccountName: system-upgrade
   secrets:
-    - name: talos
+    - name: system-upgrade
       path: /var/run/secrets/talos.dev
       ignoreUpdates: true
   nodeSelector:
     matchExpressions:
       - key: node-role.kubernetes.io/control-plane
         operator: Exists
-  prepare: &prepare
-    image: ghcr.io/siderolabs/talosctl:${TALOS_VERSION}
-    envs:
-      - name: NODE
-        valueFrom:
-          fieldRef:
-            fieldPath: status.hostIP
-    args:
-      - --nodes=$(NODE)
-      - health
   upgrade:
-    <<: *prepare
+    image: ghcr.io/siderolabs/talosctl:${TALOS_VERSION}
     args:
-      - --nodes=$(NODE)
+      - --nodes=$(SYSTEM_UPGRADE_NODE_NAME)
       - upgrade-k8s
       - --to=$(SYSTEM_UPGRADE_PLAN_LATEST_VERSION)
