fix: add scopes

--- a/kubernetes/apps/ml-system/jupyter/app/externalsecret.yaml
+++ b/kubernetes/apps/ml-system/jupyter/app/externalsecret.yaml
@@ -67,6 +67,7 @@ spec:
                 allow_all: true
                 admin_users:
                   - admin
+                scope: ["openid", "email", "groups"]
             db:
               upgrade: true
               type: postgres
