--- a/kubernetes/apps/default/romm/app/externalsecret.yaml
+++ b/kubernetes/apps/default/romm/app/externalsecret.yaml
@@ -22,7 +22,7 @@ spec:
         IGDB_CLIENT_ID: "{{ .ROMM_IGDB_CLIENT_ID }}"
         IGDB_CLIENT_SECRET: "{{ .ROMM_IGDB_CLIENT_SECRET }}"
         DISABLE_USERPASS_LOGIN: "true"
-        OIDC_ENABLED: true
+        OIDC_ENABLED: "true"
         OIDC_PROVIDER: Pocket ID
         OIDC_CLIENT_ID: "{{ .ROMM_OIDC_CLIENT_ID }}"
         OIDC_CLIENT_SECRET: "{{ .ROMM_OIDC_CLIENT_SECRET }}"
