--- a/kubernetes/apps/default/romm/app/externalsecret.yaml
+++ b/kubernetes/apps/default/romm/app/externalsecret.yaml
@@ -16,8 +16,8 @@ spec:
         REDIS_PORT: "6379"
         DB_HOST: &dbHost postgres16-rw.database.svc.cluster.local
         DB_PORT: "5432"
-        DB_USER: &dbUser "{{ .READARR_POSTGRES_USER }}"
-        DB_PASSWD: &dbPass "{{ .READARR_POSTGRES_PASSWORD }}"
+        DB_USER: &dbUser "{{ .ROMM_POSTGRES_USER }}"
+        DB_PASSWD: &dbPass "{{ .ROMM_POSTGRES_PASSWORD }}"
         DB_NAME: &dbName romm
         IGDB_CLIENT_ID: "{{ .ROMM_IGDB_CLIENT_ID }}"
         IGDB_CLIENT_SECRET: "{{ .ROMM_IGDB_CLIENT_SECRET }}"
