fix(romm): redis host name

--- a/kubernetes/apps/default/romm/app/externalsecret.yaml
+++ b/kubernetes/apps/default/romm/app/externalsecret.yaml
@@ -12,7 +12,7 @@ spec:
     template:
       data:
         # App
-        REDIS_HOST: dragonfly.database.svc.cluster.local
+        REDIS_HOST: redis.database.svc.cluster.local
         REDIS_PORT: "6379"
         DB_HOST: &dbHost postgres16-rw.database.svc.cluster.local
         DB_PORT: "5432"
