--- a/kubernetes/apps/default/romm/app/externalsecret.yaml
+++ b/kubernetes/apps/default/romm/app/externalsecret.yaml
@@ -21,6 +21,7 @@ spec:
         DB_NAME: &dbName romm
         IGDB_CLIENT_ID: "{{ .ROMM_IGDB_CLIENT_ID }}"
         IGDB_CLIENT_SECRET: "{{ .ROMM_IGDB_CLIENT_SECRET }}"
+        STEAMGRIDDB_API_KEY: "{{ .ROMM_STEAMGRIDDB_API_KEY }}"
         DISABLE_USERPASS_LOGIN: "true"
         OIDC_ENABLED: "true"
         OIDC_PROVIDER: Pocket ID
