--- a/kubernetes/apps/ml-system/mlflow/app/helmrelease.yaml
+++ b/kubernetes/apps/ml-system/mlflow/app/helmrelease.yaml
@@ -95,6 +95,8 @@ spec:
                   identifier: app
                   port: http
     persistence:
+      config:
+        existingClaim: *app
       tmp:
         type: emptyDir
         sizeLimit: 100Mi
