feat: deploy flyte

--- a/kubernetes/apps/ml-system/kustomization.yaml
+++ b/kubernetes/apps/ml-system/kustomization.yaml
@@ -7,7 +7,16 @@ components:
   - ../../flux/components/common
 resources:
   - ./binder/ks.yaml
-  # - ./flyte/ks.yaml
+  # - ./dask/ks.yaml
+  # - ./druid/ks.yaml
+  # - ./feast/ks.yaml
+  # - ./flink/ks.yaml
+  - ./flyte/ks.yaml
+  # - ./iceberg/ks.yaml
   - ./jupyter/ks.yaml
+  # - ./kafka/ks.yaml
+  # - ./kubeflow-trainer/ks.yaml
   - ./mlflow/ks.yaml
+  # - ./ray/ks.yaml
   # - ./seldon-core/ks.yaml
+  # - ./spark/ks.yaml
