--- a/kubernetes/apps/ml-system/flyte/app/externalsecret.yaml
+++ b/kubernetes/apps/ml-system/flyte/app/externalsecret.yaml
@@ -63,14 +63,14 @@ spec:
               apiVersion: v1
               kind: Namespace
               metadata:
-                name: 'flyte-{{ namespace }}'
+                name: '{{ namespace }}'
             # This block performs the automated annotation of KSAs across all project-domain namespaces
             002_serviceaccount.yaml: |
               apiVersion: v1
               kind: ServiceAccount
               metadata:
                 name: default
-                namespace: 'flyte-{{ namespace }}'
+                namespace: '{{ namespace }}'
         ingress:
           create: true
           ingressClassName: internal
