--- a/kubernetes/apps/ml-system/flyte/app/externalsecret.yaml
+++ b/kubernetes/apps/ml-system/flyte/app/externalsecret.yaml
@@ -11,76 +11,82 @@ spec:
     name: flyte-secret
     template:
       data:
-        fullnameOverride: "flyte"
-        configuration:
-          database:
-            username: "{{ .FLYTE_POSTGRES_USER }}"
-            password: "{{ .FLYTE_POSTGRES_PASSWORD }}"
-            host: postgres16-rw.database.svc.cluster.local
-            dbname: flyte
-          storage:
-            metadataContainer: flyte-metadata
-            userDataContainer: flyte-user-data
-            provider: s3
-            providerConfig:
-              s3:
-                authType: "accesskey"
-                endpoint: http://minio.default.svc.cluster.local:9000
-                accessKey: "{{ .MINIO_ROOT_USER }}"
-                secretKey: "{{ .MINIO_ROOT_PASSWORD }}"
-          logging:
-            level: 5
-            plugins:
-              kubernetes:
-                enabled: true
-          auth:
-            enabled: true
-            oidc:
-              baseUrl: https://id.goyangi.cloud
-              clientId: "{{ .FLYTE_OIDC_CLIENT_ID }}"
-              clientSecret: "{{ .FLYTE_OIDC_CLIENT_SECRET }}"
-            authorizedUris:
-            - https://flyte.goyangi.cloud
+        values.yaml: |
+          fullnameOverride: "flyte"
+          configuration:
+            database:
+              username: "{{ .FLYTE_POSTGRES_USER }}"
+              password: "{{ .FLYTE_POSTGRES_PASSWORD }}"
+              host: postgres16-rw.database.svc.cluster.local
+              dbname: flyte
             storage:
-              cache:
-                max_size_mbs: 10
-                target_gc_percent: 100
-            tasks:
-              task-plugins:
-                enabled-plugins:
-                  - container
-                  - sidecar
-                  - K8S-ARRAY #used for MapTasks
-                  - agent-service
-                  - echo
-                default-for-task-types:
-                  - container: container
-                  - container_array: K8S-ARRAY
-        clusterResourceTemplates:
-          inline:
-            #This section automates the creation of the project-domain namespaces
-            001_namespace.yaml: |
-              apiVersion: v1
-              kind: Namespace
-              metadata:
-                name: '{{ namespace }}'
-            # This block performs the automated annotation of KSAs across all project-domain namespaces
-            002_serviceaccount.yaml: |
-              apiVersion: v1
-              kind: ServiceAccount
-              metadata:
-                name: default
-                namespace: '{{ namespace }}'
-        ingress:
-          create: true
-          ingressClassName: internal
-          commonAnnotations:
-            ingress.kubernetes.io/rewrite-target: /
-            nginx.ingress.kubernetes.io/ssl-redirect: "true"
-          httpAnnotations:
-            nginx.ingress.kubernetes.io/app-root: /console
-          grpcAnnotations:
-            nginx.ingress.kubernetes.io/backend-protocol: GRPC
-          host: flyte.goyangi.cloud
-        serviceAccount:
-          create: true
+              metadataContainer: flyte-metadata
+              userDataContainer: flyte-user-data
+              provider: s3
+              providerConfig:
+                s3:
+                  authType: "accesskey"
+                  endpoint: http://minio.default.svc.cluster.local:9000
+                  accessKey: "{{ .MINIO_ROOT_USER }}"
+                  secretKey: "{{ .MINIO_ROOT_PASSWORD }}"
+            logging:
+              level: 5
+              plugins:
+                kubernetes:
+                  enabled: true
+            auth:
+              enabled: true
+              oidc:
+                baseUrl: https://id.goyangi.cloud
+                clientId: "{{ .FLYTE_OIDC_CLIENT_ID }}"
+                clientSecret: "{{ .FLYTE_OIDC_CLIENT_SECRET }}"
+              authorizedUris:
+              - https://flyte.goyangi.cloud
+              storage:
+                cache:
+                  max_size_mbs: 10
+                  target_gc_percent: 100
+              tasks:
+                task-plugins:
+                  enabled-plugins:
+                    - container
+                    - sidecar
+                    - K8S-ARRAY #used for MapTasks
+                    - agent-service
+                    - echo
+                  default-for-task-types:
+                    - container: container
+                    - container_array: K8S-ARRAY
+          clusterResourceTemplates:
+            inline:
+              #This section automates the creation of the project-domain namespaces
+              001_namespace.yaml: |
+                apiVersion: v1
+                kind: Namespace
+                metadata:
+                  name: '{{ namespace }}'
+              # This block performs the automated annotation of KSAs across all project-domain namespaces
+              002_serviceaccount.yaml: |
+                apiVersion: v1
+                kind: ServiceAccount
+                metadata:
+                  name: default
+                  namespace: '{{ namespace }}'
+          ingress:
+            create: true
+            ingressClassName: internal
+            commonAnnotations:
+              ingress.kubernetes.io/rewrite-target: /
+              nginx.ingress.kubernetes.io/ssl-redirect: "true"
+            httpAnnotations:
+              nginx.ingress.kubernetes.io/app-root: /console
+            grpcAnnotations:
+              nginx.ingress.kubernetes.io/backend-protocol: GRPC
+            host: flyte.goyangi.cloud
+          serviceAccount:
+            create: true
+  dataFrom:
+    - extract:
+        key: flyte
+    - extract:
+        key: minio
