fix(flyte): escape templating

--- a/kubernetes/apps/ml-system/flyte/app/externalsecret.yaml
+++ b/kubernetes/apps/ml-system/flyte/app/externalsecret.yaml
@@ -64,14 +64,14 @@ spec:
                 apiVersion: v1
                 kind: Namespace
                 metadata:
-                  name: '`{{ namespace }}`'
+                  name: '\{\{ namespace \}\}'
               # This block performs the automated annotation of KSAs across all project-domain namespaces
               002_serviceaccount.yaml: |
                 apiVersion: v1
                 kind: ServiceAccount
                 metadata:
                   name: default
-                  namespace: '`{{ namespace }}`'
+                  namespace: '\{\{ namespace \}\}'
           ingress:
             create: true
             ingressClassName: internal
