--- a/kubernetes/apps/ml-system/flyte/app/externalsecret.yaml
+++ b/kubernetes/apps/ml-system/flyte/app/externalsecret.yaml
@@ -13,6 +13,23 @@ spec:
       data:
         values.yaml: |
           fullnameOverride: "flyte"
+          deployment:
+            initContainers:
+              - name: init-db
+                image: ghcr.io/solanyn/postgres-init:16
+                env:
+                  - name: INIT_POSTGRES_DBNAME
+                    value: "flyte"
+                  - name: INIT_POSTGRES_HOST
+                    value: "postgres16-rw.database.svc.cluster.local"
+                  - name: INIT_POSTGRES_USER
+                    value: "{{ .FLYTE_POSTGRES_USER }}"
+                  - name: INIT_POSTGRES_PASS
+                    value: "{{ .FLYTE_POSTGRES_PASSWORD }}"
+                  - name: INIT_POSTGRES_SUPER_PASS
+                    value: "{{ .POSTGRES_SUPER_PASS }}"
+                  - name: INIT_POSTGRES_SUPER_USER
+                    value: "{{ .POSTGRES_SUPER_USER }}"
           configuration:
             database:
               username: "{{ .FLYTE_POSTGRES_USER }}"
