feat(flyte): add reloader

--- a/kubernetes/apps/ml-system/flyte/app/externalsecret.yaml
+++ b/kubernetes/apps/ml-system/flyte/app/externalsecret.yaml
@@ -13,6 +13,8 @@ spec:
       data:
         values.yaml: |
           fullnameOverride: "flyte"
+          commonAnnotations:
+            reloader.stakater.com/auto: "true"
           deployment:
             initContainers:
               - name: init-db
