--- a/kubernetes/apps/default/romm/app/externalsecret.yaml
+++ b/kubernetes/apps/default/romm/app/externalsecret.yaml
@@ -22,7 +22,7 @@ spec:
         IGDB_CLIENT_ID: "{{ .ROMM_IGDB_CLIENT_ID }}"
         IGDB_CLIENT_SECRET: "{{ .ROMM_IGDB_CLIENT_SECRET }}"
         STEAMGRIDDB_API_KEY: "{{ .ROMM_STEAMGRIDDB_API_KEY }}"
-        DISABLE_USERPASS_LOGIN: "true"
+        DISABLE_USERPASS_LOGIN: "false"
         OIDC_ENABLED: "true"
         OIDC_PROVIDER: Pocket ID
         OIDC_CLIENT_ID: "{{ .ROMM_OIDC_CLIENT_ID }}"
