--- a/kubernetes/apps/default/romm/app/helmrelease.yaml
+++ b/kubernetes/apps/default/romm/app/helmrelease.yaml
@@ -44,7 +44,7 @@ spec:
               tag: 3.7.3@sha256:45bfde6088e217b0f050064ca2146bbbf052a559112567cf129e17f52fd07f5b
             env:
               ROMM_DB_DRIVER: postgresql
-              ROMM_BASE_PATH: /config
+              ROMM_BASE_PATH: /media/games
               DISABLE_DOWNLOAD_ENDPOINT_AUTH: true
               TZ: Australia/Sydney
             envFrom: *envFrom
