revert: "chore(jupyter): drop init securityContext"
This reverts commit 6fca2c16728296d931c0011ff9cc6471da673656.

--- a/kubernetes/apps/ml-system/jupyter/app/externalsecret.yaml
+++ b/kubernetes/apps/ml-system/jupyter/app/externalsecret.yaml
@@ -88,6 +88,14 @@ spec:
                     value: "{{ .POSTGRES_SUPER_PASS }}"
                   - name: INIT_POSTGRES_SUPER_USER
                     value: "{{ .POSTGRES_SUPER_USER }}"
+                securityContext:
+                  runAsNonRoot: true
+                  runAsUser: 1000
+                  runAsGroup: 1000
+                  fsGroup: 1000
+                  fsGroupChangePolicy: OnRootMismatch
+                  seccompProfile: {type: RuntimeDefault}
+                  supplementalGroups: [10000]
             resources:
               requests:
                 cpu: 10m
