--- a/kubernetes/apps/default/romm/app/externalsecret.yaml
+++ b/kubernetes/apps/default/romm/app/externalsecret.yaml
@@ -24,7 +24,7 @@ spec:
         STEAMGRIDDB_API_KEY: "{{ .ROMM_STEAMGRIDDB_API_KEY }}"
         DISABLE_USERPASS_LOGIN: "false"
         OIDC_ENABLED: "true"
-        OIDC_PROVIDER: Pocket ID
+        OIDC_PROVIDER: pocketid
         OIDC_CLIENT_ID: "{{ .ROMM_OIDC_CLIENT_ID }}"
         OIDC_CLIENT_SECRET: "{{ .ROMM_OIDC_CLIENT_SECRET }}"
         OIDC_REDIRECT_URI: https://romm.goyangi.cloud/api/oauth/openid
