fix(flyte): add internal client secret

--- a/kubernetes/apps/ml-system/flyte/app/externalsecret.yaml
+++ b/kubernetes/apps/ml-system/flyte/app/externalsecret.yaml
@@ -54,6 +54,8 @@ spec:
                 baseUrl: https://id.goyangi.cloud
                 clientId: "{{ .FLYTE_OIDC_CLIENT_ID }}"
                 clientSecret: "{{ .FLYTE_OIDC_CLIENT_SECRET }}"
+              internal:
+                clientSecret: '{{ .FLYTE_INTERNAL_CLIENT_SECRET }}'
               authorizedUris:
               - https://flyte.goyangi.cloud
               storage:
