feat(grafana): add flyte dashboards

--- a/kubernetes/apps/observability/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/grafana/app/helmrelease.yaml
@@ -230,8 +230,25 @@ spec:
           gnetId: 13665
           revision: 4
           datasource:
-            - name: DS_PROMETHEUS
-              value: Prometheus
+            - {name: DS_PROMETHEUS, value: Prometheus}
+        flyte-propeller:
+          # renovate: depName="Flyte Propeller Dashboard"
+          gnetId: 21719
+          revision: 1
+          datasource:
+            - {name: DS_PROMETHEUS, value: Prometheus}
+        flyte-user:
+          # renovate: depName="Flyte User Dashboard"
+          gnetId: 22146
+          revision: 1
+          datasource:
+            - {name: DS_PROMETHEUS, value: Prometheus}
+        flyte-admin:
+          # renovate: depName="FlyteAdmin Dashboard"
+          gnetId: 21720
+          revision: 1
+          datasource:
+            - {name: DS_PROMETHEUS, value: Prometheus}
     sidecar:
       dashboards:
         enabled: true
