fix(seldon): add namespace to gateway

--- a/kubernetes/apps/ml-system/seldon-core/app/helmrelease.yaml
+++ b/kubernetes/apps/ml-system/seldon-core/app/helmrelease.yaml
@@ -29,7 +29,7 @@ spec:
       enabled: true
     istio:
       enabled: true
-      gateway: seldon-gateway
+      gateway: ml-system/seldon-gateway
     predictiveUnit:
       defaultEnvSecretRefName: seldon-core-secret
     usageMetrics:
